# sergw

./: CHANGELOG.md  Cargo.toml  Makefile  PKGBUILD  README.md
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: cli.rs  main.rs  metrics.rs  mock.rs  serial.rs  server.rs  state.rs  tui.rs  tui_chat.rs  tui_chat_mock.rs
src/app/: listen.rs  listener.rs  mod.rs
src/app/mock/: mod.rs  pty.rs  serial.rs  ui.rs
src/net/: listener.rs  mod.rs  server.rs
src/serial/: io.rs  mod.rs
src/ui/: inspector.rs  mod.rs  overview.rs
